scripts/alfresco-adf-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: alfresco-factom-demo
  name: alfresco-factom-demo
  namespace: triall
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      run: alfresco-factom-demo
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: alfresco-factom-demo
    spec:
      imagePullSecrets:
        - name: sphereonregistrydev
      containers:
      - image: sphereonregistrydev.azurecr.io/alfresco/adf-factom-demo:latest
        imagePullPolicy: Always
        name: alfresco-factom-demo
        ports:
        - containerPort: 4200
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - name: triall-app-config
          mountPath: "/usr/share/nginx/html/app.config.json"
          subPath: app.config.json
      volumes:
      - name: triall-app-config
        configMap:
            name: triall-app-config
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
