scripts/alfresco-adf-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: alfresco-adf-demo
    namespace: triall
    annotations:
        kubernetes.io/ingress.class: "nginx"
        ingress.kubernetes.io/force-ssl-redirect: "true"
        nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
        # Default limit is 1m, document(s) above this size will throw 413 (Request Entity Too Large) error
        nginx.ingress.kubernetes.io/proxy-body-size: 5g
        nginx.ingress.kubernetes.io/configuration-snippet: |
            location ~ ^(/.*/proxy/alfresco/api/solr/.*)$ {return 403 ;}
                        location ~ ^(/.*/-default-/proxy/alfresco/api/.*)$ {return 403;}

spec:
    rules:
    - http:
          paths:
          - path: /
            backend:
                serviceName: alfresco-adf-demo
                servicePort: 80
